--- a/gitlab/runner-values.yaml
+++ b/gitlab/runner-values.yaml
@@ -3,20 +3,58 @@ unregisterRunners: true
 replicas: 3
 rbac:
   create: true
+
 image:
   registry: docker.io
   image: gitlab/gitlab-runner
-  tag: alpine-v16.6.0
+  tag: alpine-v16.8.1
+
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 1
+  type: RollingUpdate
+
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - podAffinityTerm:
+        labelSelector:
+          matchExpressions:
+          - key: app
+            operator: In
+            values:
+            - gitlab-runner
+        topologyKey: kubernetes.io/hostname
+      weight: 1
+
 runners:
   secret: gitlab-runner-secret
   config: |
     [[runners]]
-      environment = ["LC_ALL=en_US.UTF-8", "LANG=C.UTF-8", "LANGUAGE=en_US:en", "DOCKER_HOST=tcp://docker:2376", "DOCKER_TLS_VERIFY=1", "DOCKER_CERT_PATH=/certs/client"]
+      environment = [
+        "LC_ALL=en_US.UTF-8",
+        "LANG=C.UTF-8",
+        "LANGUAGE=en_US:en",
+        "DOCKER_HOST=tcp://docker:2376",
+        "DOCKER_TLS_VERIFY=1",
+        "DOCKER_CERT_PATH=/certs/client"
+      ]
       [runners.kubernetes]
         image = "docker:24-git"
         privileged = true
-        helper_image = "docker.io/gitlab/gitlab-runner-helper:x86_64-85586bd1"
-        ### DinD Stafulset certificates ###
+        helper_image = "docker.io/gitlab/gitlab-runner-helper:x86_64-v16.8.1"
+        cpu_request = "2"
+        memory_request = "4Gi"
+        ### DinD as Stafulset - certificates ###
+        # [[runners.kubernetes.volumes.secret]]
+        #   name = "dind-server"
+        #   mount_path = "/certs/server"
+        #   read_only = true
+        #   [runners.kubernetes.volumes.secret.items]
+        #     "ca.pem" = "ca.pem"
+        #     "cert.pem" = "cert.pem"
+        #     "key.pem" = "key.pem"
         # [[runners.kubernetes.volumes.secret]]
         #   name = "dind-client"
         #   mount_path = "/certs/client"
@@ -25,6 +63,14 @@ runners:
         #     "ca.pem" = "ca.pem"
         #     "cert.pem" = "cert.pem"
         #     "key.pem" = "key.pem"
+        ### DinD as GitLab Service - certificates ###
+        [[runners.kubernetes.volumes.empty_dir]]
+          name = "docker-certs"
+          mount_path = "/certs/client"
+          medium = "Memory"
+        [[runners.kubernetes.volumes.empty_dir]]
+          name = "dind-storage"
+          mount_path = "/var/lib/docker"
       [runners.cache]
         Type = "s3"
         Shared = true
